  Company : SHTRIH-M www.shtrih-m.ru (495) 787-6090
  Url     : https://github.com/shtrih-m/javapos_shtrih
    
********************************************************************************

  19.10.2021
  deviceServiceVersion = 1013634

  [-] Fixed error with quantityCorrectionEnabled parameter
  [-] Fixed error with read TLV document to the end
  
********************************************************************************

  08.10.2021
  deviceServiceVersion = 1013633

  [-] Fixed error with graphics wider than 512 pixels
	  
********************************************************************************

  24.08.2021
  deviceServiceVersion = 1013631

  [-] Fixed error with correction receipt tags, 
      directIO command SMFPTR_DIO_PRINT_CORRECTION2

********************************************************************************

  19.08.2021
  deviceServiceVersion = 1013630

  [-] Fixed error with command 0xFF61, changed parameters ranges

********************************************************************************

  23.07.2021
  deviceServiceVersion = 1013629

  [-] Fixed error with waiting for print end

********************************************************************************

  22.07.2021
  deviceServiceVersion = 1013628

  [+] Added tag 2115 processing
  [-] Fixed tag 2108 printing

********************************************************************************

  16.07.2021
  deviceServiceVersion = 1013627

  [+] Added tag TAG_NAME and TAG_VALUE to receipt template
  
********************************************************************************

  30.06.2021
  deviceServiceVersion = 1013626

  [-] Fixed error with continue print command
  
********************************************************************************

  17.06.2021
  deviceServiceVersion = 1013625

  [+] Added parameter tags tagsBeforeItem, default value true.

********************************************************************************

  17.06.2021